# gear5-rs

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  SCRAPING_GUIDE.md  config.toml
crates/gear5-api/: Cargo.toml
crates/gear5-api/src/: auth_cache.rs  main.rs  scheduler.rs  search_cache.rs  state.rs
crates/gear5-api/src/middleware/: auth.rs  error.rs  mod.rs
crates/gear5-api/src/openapi/: mod.rs  schemas.rs
crates/gear5-api/src/routes/: admin.rs  cards.rs  dump.rs  health.rs  images.rs  mod.rs  sets.rs
crates/gear5-api/tests/: auth_cache.rs  cards_search.rs  openapi_spec.rs  search_cache.rs
crates/gear5-cli/: Cargo.toml
crates/gear5-cli/src/: main.rs
crates/gear5-cli/src/cmd/: key.rs  migrate.rs  mod.rs  scrape.rs
crates/gear5-core/: Cargo.toml
crates/gear5-core/src/: config.rs  db.rs  error.rs  lib.rs  model.rs
crates/gear5-core/src/auth/: key.rs  mod.rs  scope.rs
crates/gear5-core/src/scraper/: fetch.rs  mod.rs  parse.rs  sync.rs
crates/gear5-core/tests/: parse_fixture.rs
deploy/: config.example.toml  gear5-api.service
migrations/: 20260516000001_init.sql  20260516000002_api_keys.sql  20260517000001_card_search.sql  20260517000002_scrape_run_sets.sql  20260517000003_cleanup_stale_runs.sql  20260517000004_sets_html_hash.sql  20260517000005_cards_unchanged.sql  20260517000006_fix_html_hash_location.sql
