[package]
name = "gear5-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin CLI: migrations, manual scrape, API-key lifecycle."

[[bin]]
name = "gear5"
path = "src/main.rs"

[dependencies]
gear5-core.workspace = true

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
