[package]
name = "gear5-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared library: scraper, domain model, key crypto, db access."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
base32.workspace = true
bytes.workspace = true
chrono.workspace = true
figment.workspace = true
futures-util.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
utoipa.workspace = true
uuid.workspace = true
